--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,44 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: 17
-        distribution: "adopt"
+        distribution: correto
 
     #finally build your app with the latest command
     - name: Build and test with Maven
       run: mvn clean verify --file api/pom.xml
+
+# define job to build and publish docker image
+  build-and-push-docker-image:
+   needs: test-backend
+   # run only when code is compiling and tests are passing
+   runs-on: ubuntu-22.04
+   environment: devops-TP2
+
+   # steps to perform in job
+   steps:
+    - name: Checkout code
+      uses: actions/checkout@v2.5.0
+
+    - name: Build image and push backend
+      uses: docker/build-push-action@v3
+      with:
+        # relative path to the place where source code with Dockerfile is located
+        context: ./api/
+        # Note: tags has to be all lower-case
+        tags:  ${{secrets.DOCKERHUB_USR}}/docker-api
+
+    - name: Build image and push database
+      uses: docker/build-push-action@v3
+      with:
+        # relative path to the place where source code with Dockerfile is located
+        context: ./data/
+        # Note: tags has to be all lower-case
+        tags:  ${{secrets.DOCKERHUB_USR}}/docker-database
+
+    - name: Build image and push httpd
+      uses: docker/build-push-action@v3
+      with:
+        # relative path to the place where source code with Dockerfile is located
+        context: ./http/
+        # Note: tags has to be all lower-case
+        tags:  ${{secrets.DOCKERHUB_USR}}/docker-web
