--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: 17
-        distribution: correto
+        distribution: corretto
 
     #finally build your app with the latest command
     - name: Build and test with Maven
