--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2.5.0
 
+    - name: Login to DockerHub
+      run: docker login -u ${{ secrets.DOCKERHUB_USR }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Build image and push backend
       uses: docker/build-push-action@v3
       with:
@@ -42,6 +45,8 @@ jobs:
         context: ./api/
         # Note: tags has to be all lower-case
         tags:  ${{secrets.DOCKERHUB_USR}}/docker-api
+        # build on feature branches, push only on main branch
+        push: ${{ github.ref == 'refs/heads/main' }}
 
     - name: Build image and push database
       uses: docker/build-push-action@v3
@@ -50,6 +55,8 @@ jobs:
         context: ./data/
         # Note: tags has to be all lower-case
         tags:  ${{secrets.DOCKERHUB_USR}}/docker-database
+        # build on feature branches, push only on main branch
+        push: ${{ github.ref == 'refs/heads/main' }}
 
     - name: Build image and push httpd
       uses: docker/build-push-action@v3
@@ -58,3 +65,5 @@ jobs:
         context: ./http/
         # Note: tags has to be all lower-case
         tags:  ${{secrets.DOCKERHUB_USR}}/docker-web
+        # build on feature branches, push only on main branch
+        push: ${{ github.ref == 'refs/heads/main' }}
