--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
         # relative path to the place where source code with Dockerfile is located
         context: ./api/
         # Note: tags has to be all lower-case
-        tags:  ${{secrets.DOCKERHUB_USR}}/docker-api
+        tags:  ${{secrets.DOCKERHUB_USR}}/docker-api:latest
         # build on feature branches, push only on main branch
         push: ${{ github.ref == 'refs/heads/main' }}
 
@@ -54,7 +54,7 @@ jobs:
         # relative path to the place where source code with Dockerfile is located
         context: ./data/
         # Note: tags has to be all lower-case
-        tags:  ${{secrets.DOCKERHUB_USR}}/docker-database
+        tags:  ${{secrets.DOCKERHUB_USR}}/docker-database:latest
         # build on feature branches, push only on main branch
         push: ${{ github.ref == 'refs/heads/main' }}
 
@@ -64,6 +64,6 @@ jobs:
         # relative path to the place where source code with Dockerfile is located
         context: ./http/
         # Note: tags has to be all lower-case
-        tags:  ${{secrets.DOCKERHUB_USR}}/docker-web
+        tags:  ${{secrets.DOCKERHUB_USR}}/docker-web:latest
         # build on feature branches, push only on main branch
         push: ${{ github.ref == 'refs/heads/main' }}
