--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         # Note: tags has to be all lower-case
         tags:  ${{secrets.DOCKERHUB_USR}}/docker-api:latest
         # build on feature branches, push only on main branch
-        push: ${{ github.ref == 'refs/heads/main' }}
+        push: ${{ github.ref == 'refs/heads/TP2' }}
 
     - name: Build image and push database
       uses: docker/build-push-action@v3
@@ -56,7 +56,7 @@ jobs:
         # Note: tags has to be all lower-case
         tags:  ${{secrets.DOCKERHUB_USR}}/docker-database:latest
         # build on feature branches, push only on main branch
-        push: ${{ github.ref == 'refs/heads/main' }}
+        push: ${{ github.ref == 'refs/heads/TP2' }}
 
     - name: Build image and push httpd
       uses: docker/build-push-action@v3
@@ -66,4 +66,4 @@ jobs:
         # Note: tags has to be all lower-case
         tags:  ${{secrets.DOCKERHUB_USR}}/docker-web:latest
         # build on feature branches, push only on main branch
-        push: ${{ github.ref == 'refs/heads/main' }}
+        push: ${{ github.ref == 'refs/heads/TP2' }}
