--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
-name: CI devops 2023
+name: wf-main
 on:
   #to begin you want to launch this job in main and develop
   push:
     branches:
      - TP2
+     - dev-TP2
   pull_request:
 
 jobs:
@@ -24,47 +25,3 @@ jobs:
     - name: Build and test with Maven
       #run: mvn clean verify --file api/pom.xml
       run : mvn -B verify sonar:sonar -Dsonar.projectKey=MaximeBattu_DevOps -Dsonar.organization=maximebattu -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} --file ./api/pom.xml
-
-# define job to build and publish docker image
-  build-and-push-docker-image:
-   needs: test-backend
-   # run only when code is compiling and tests are passing
-   runs-on: ubuntu-22.04
-
-   # steps to perform in job
-   steps:
-    - name: Checkout code
-      uses: actions/checkout@v2.5.0
-
-    - name: Login to DockerHub
-      run: docker login -u ${{ secrets.DOCKERHUB_USR }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Build image and push backend
-      uses: docker/build-push-action@v3
-      with:
-        # relative path to the place where source code with Dockerfile is located
-        context: ./api/
-        # Note: tags has to be all lower-case
-        tags:  ${{secrets.DOCKERHUB_USR}}/docker-api:latest
-        # build on feature branches, push only on main branch
-        push: ${{ github.ref == 'refs/heads/TP2' }}
-
-    - name: Build image and push database
-      uses: docker/build-push-action@v3
-      with:
-        # relative path to the place where source code with Dockerfile is located
-        context: ./data/
-        # Note: tags has to be all lower-case
-        tags:  ${{secrets.DOCKERHUB_USR}}/docker-database:latest
-        # build on feature branches, push only on main branch
-        push: ${{ github.ref == 'refs/heads/TP2' }}
-
-    - name: Build image and push httpd
-      uses: docker/build-push-action@v3
-      with:
-        # relative path to the place where source code with Dockerfile is located
-        context: ./http/
-        # Note: tags has to be all lower-case
-        tags:  ${{secrets.DOCKERHUB_USR}}/docker-web:latest
-        # build on feature branches, push only on main branch
-        push: ${{ github.ref == 'refs/heads/TP2' }}
