--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -2,7 +2,8 @@ name: CD
 on:
   #to begin you want to launch this job in main and develop
   workflow_run:
-    workflows: ["CI"]
+    workflows:
+     - CI
     types:
      - completed
     branches:
