--- a/ansible/inventories/setup.yml
+++ b/ansible/inventories/setup.yml
@@ -1,7 +1,7 @@
 all:
  vars:
    ansible_user: centos
-   ansible_ssh_private_key_file: /home/mbattu/keys/id_rsaB
+   ansible_ssh_private_key_file: /home/mbattu/keys/id_rsa
  children:
    prod:
-     hosts: batiste.laloi.takima.cloud
+     hosts: maxime.battu.takima.cloud
